--- a/src/main/resources/templates/area/update.html
+++ b/src/main/resources/templates/area/update.html
@@ -32,6 +32,6 @@
             </tr>
         </table>
         <input type="submit" onclick="return confirm('¿Seguro que desea actualizar el area y los datos son correctos?')"
-               value="Añadir Zona" class="btn btn-success" />Actualizar Área</td>
+               value="Añadir Zona" class="btn btn-warning" />Actualizar Área</td>
     </form>
 </main>
