--- a/src/main/resources/templates/areaPeriod/list.html
+++ b/src/main/resources/templates/areaPeriod/list.html
@@ -2,32 +2,33 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{fragments/base}">
 <span layout:fragment="title" th:text="'Horarios de ' + ${data[0].area.name} + ' (' + ${data[0].municipality.name} + ')'"></span>
 <main layout:fragment="content">
-    <p th:if="${#lists.isEmpty(object)}">No hay ningun horario registrado</p>
-    <table th:unless="${#lists.isEmpty(object)}" class="table table-striped">
+    <table class="table table-striped">
         <thead>
         <tr>
             <th>Fechas</th>
             <th>Horario</th>
-            <th th:if="session.user instanceof T(app.model.MunicipalManager)">
-                <a href="add" class="btn btn-success" role="button">Añadir horario</a>
+            <th>
+                <a th:if="${session.user instanceof T(app.model.MunicipalManager)}" href="add" class="btn btn-success" role="button">Añadir horario</a>
             </th>
         </tr>
         </thead>
         <tbody>
+        <tr th:if="${#lists.isEmpty(object)}">
+            <td colspan="3">No hay ningun horario registrado<td>
+        </tr>
         <tr th:each="object: ${object}">
             <td th:text="*{object.toScheduleString}"></td>
             <td th:text="*{object.toPeriodString}"></td>
-            <td th:if="session.user != null">
-                <a th:if="session.user instanceof T(app.model.Citizen)"
-                        th:href="@{/reservation/add/{id}(id=${object.id})}" class="btn btn-success" role="button">Reservar
+            <td>
+                <a th:if="${session.user == null or session.user instanceof T(app.model.Citizen)}" th:href="@{/reservation/add/{id}(id=${object.id})}" class="btn btn-success" role="button">Reservar
                 </a>
-                <a th:if="session.user instanceof T(app.model.MunicipalManager)"
+                <a th:if="${session.user instanceof T(app.model.MunicipalManager)}"
                     th:href="@{/control-staff/list/{id}(id=${object.id})}" class="btn btn-success" role="button">Ver personal
                 </a>
-                <a th:if="session.user instanceof T(app.model.MunicipalManager)"
+                <a th:if="${session.user instanceof T(app.model.MunicipalManager)}"
                     th:href="@{update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar
                 </a>
-                <a th:if="session.user instanceof T(app.model.MunicipalManager)"
+                <a th:if="${session.user instanceof T(app.model.MunicipalManager)}"
                     th:href="@{delete/{id}(id=${object.id})}" onclick="return confirm('¿Seguro que desea eliminar el horario?')" class="btn btn-danger" role="button">Eliminar
                 </a>
             </td>
