--- a/src/main/resources/templates/areaPeriod/update.html
+++ b/src/main/resources/templates/areaPeriod/update.html
@@ -24,6 +24,6 @@
             </tr>
         </table>
         <input type="submit" onclick="return confirm('¿Seguro que desea actualizar el horario y los datos son correctos?')"
-               value="Añadir horario" class="btn btn-success" />Actualizar horario</td>
+               value="Añadir horario" class="btn btn-warning" />Actualizar horario</td>
     </form>
 </main>
