--- a/src/main/resources/templates/citizen/update.html
+++ b/src/main/resources/templates/citizen/update.html
@@ -36,7 +36,7 @@
             </tr>
         </table>
         <input onclick="return confirm('¿Seguro que quiere actualizar los datosy los datos son correctos?')"
-               type="submit" value="Actualizar datos" class="btn btn-success"
+               type="submit" value="Actualizar datos" class="btn btn-warning"
         /></td>
     </form>
 </main>
