--- a/src/main/resources/templates/municipalManager/update.html
+++ b/src/main/resources/templates/municipalManager/update.html
@@ -31,6 +31,6 @@
                 <td><input type="text" id="phone" th:field="*{phone}"></td>
             </tr>
         </table>
-        <input type="submit" value="Actualizar gestor/a municipal" class="btn btn-success" /></td>
+        <input type="submit" value="Actualizar gestor/a municipal" class="btn btn-warning" /></td>
     </form>
 </main>
