--- a/src/main/resources/templates/municipality/list.html
+++ b/src/main/resources/templates/municipality/list.html
@@ -8,8 +8,8 @@
             <tr>
                 <th>Nombre</th>
                 <th>Validez</th>
-                <th th:if="session.user instanceof T(app.model.EnviromentalManager)">
-                    <a href="add" class="btn btn-success" role="button">Añadir municipio</a>
+                <th>
+                    <a th:if="${session.user instanceof T(app.model.EnviromentalManager)}" href="add" class="btn btn-success" role="button">Añadir municipio</a>
                 </th>
             </tr>
         </thead>
@@ -19,11 +19,10 @@
                 <td th:text="*{object.toSignString}"></td>
                 <td>
                     <a th:href="@{/area/list/{id}(id=${object.id})}" class="btn btn-success" role="button">Ver areas</a>
-                    <a th:if="session.user instanceof T(app.model.MunicipalManager)"
-                       th:if="session.user.municipality == object.id"
+                    <a th:if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == object.id}"
                         th:href="@{update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar
                     </a>
-                    <a th:if="session.user instanceof T(app.model.EnviromentalManager)"
+                    <a th:if="${session.user instanceof T(app.model.EnviromentalManager)}"
                         th:href="@{delete/{id}(id=${object.id})}"
                        onclick="return confirm('¿Seguro que desea dar de baja el municipio?')"
                        class="btn btn-danger" role="button">Dar de baja municipio
