--- a/src/main/resources/templates/zone/update.html
+++ b/src/main/resources/templates/zone/update.html
@@ -20,6 +20,6 @@
             </tr>
         </table>
         <input type="submit" onclick="return confirm('¿Seguro que desea actualizar la zona y los datos son correctos?')"
-               value="Actualizar Zona" class="btn btn-success" />Actualizar zona</td>
+               value="Actualizar Zona" class="btn btn-warning" />Actualizar zona</td>
     </form>
 </main>
