--- a/src/main/resources/templates/municipality/update.html
+++ b/src/main/resources/templates/municipality/update.html
@@ -12,6 +12,6 @@
             </tr>
         </table>
         <input type="submit" value="Actualizar municipio"
-               class="btn btn-success" onclick="return confirm('¿Seguro que desea actualizar los datos y los datos son correctos?')"/>Actualizar municipio</td>
+               class="btn btn-warning" onclick="return confirm('¿Seguro que desea actualizar los datos y los datos son correctos?')"/>Actualizar municipio</td>
     </form>
 </main>
