--- a/src/main/resources/templates/reservation/list.html
+++ b/src/main/resources/templates/reservation/list.html
@@ -23,10 +23,10 @@
         <td th:text="*{data[objectStat.index].zone}"></td>
         <td th:text="*{object.date}"></td>
         <td th:text="*{data[objectStat.index].areaPeriod.toPeriodString}"></td>
-      <td th:if="sessioun.user != null and not session.user instanceof T(app.model.EnviromentalManager)">
+        <td>
           <a th:href="@{delete/{id}(id=${object.id})}"
              onclick="return confirm('¿Seguro que desea cancelar la reserva?')"
-             class="btn btn-danger" role="button" th:if="*{object.active}">Cancelar la reserva</a>
+             class="btn btn-danger" role="button" th:if="*{object.active and session.user != null and not (session.user instanceof T(app.model.EnviromentalManager))}">Cancelar la reserva</a>
         </td>
       </tr>
     </tbody>
