--- a/src/main/resources/templates/service/list.html
+++ b/src/main/resources/templates/service/list.html
@@ -19,7 +19,7 @@
             <td th:text="*{object.toScheduleString}"></td>
             <td th:text="*{object.toPeriodString}"></td>
             <td th:text="*{object.toPeriodString}"></td>
-            <td th:if="session.user instanceof T(app.model.MunicipalManager">
+            <td th:if="${session.user instanceof T(app.model.MunicipalManager}">
                 <a th:href="@{update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar</a>
                 <a th:href="@{delete/{id}(id=${object.id})}"
                    onclick="return confirm('¿Seguro que desea eliminar el servicio?')"
