--- a/src/main/resources/templates/service/update.html
+++ b/src/main/resources/templates/service/update.html
@@ -32,6 +32,6 @@
             </tr>
         </table>
         <input type="submit" onclick="return confirm('¿Seguro que desea actualizar y los datos son correctos?')"
-               value="Actualizar servicio" class="btn btn-success" />Añadir servicio</td>
+               value="Actualizar servicio" class="btn btn-warning" />Añadir servicio</td>
     </form>
 </main>
