--- a/src/main/resources/templates/fragments/base.html
+++ b/src/main/resources/templates/fragments/base.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"/>
-        <link type="text/css" th:href="@{/css/base.css}" rel="stylesheet"/>
-        <title layout:title-pattern="$CONTENT_TITLE">Safe Access to Natural Areas</title>
-    </head>
-    <body class="container">
-        <header class="page-header">
-            <h1><img class="brand-logo" src="/img/logo.png" th:src="@{/img/logo.png}"><abbr title="Safe Access to Natural Areas">SANA</abbr> - <span layout:fragment="title"></span></h1>
-            <nav th:replace="fragments/nav"></nav>
-        </header>
-        <main layout:fragment="content"></main>
-        <footer class="navbar bg-light text-muted">EI1027 - Diseño y Implementación de Sistemas de la Información</footer>
-    </body>
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"/>
+    <link type="text/css" th:href="@{/css/base.css}" rel="stylesheet"/>
+    <title layout:title-pattern="$CONTENT_TITLE">Safe Access to Natural Areas</title>
+</head>
+<body class="container">
+<header class="page-header">
+    <h1><img class="brand-logo" src="/img/logo.png" th:src="@{/img/logo.png}"><abbr
+            title="Safe Access to Natural Areas">SANA</abbr> - <span layout:fragment="title"></span></h1>
+    <nav th:replace="fragments/nav"></nav>
+</header>
+<main layout:fragment="content"></main>
+<footer class="navbar bg-light text-muted">EI1027 - Diseño y Implementación de Sistemas de la Información</footer>
+</body>
 </html>
