--- a/src/main/resources/templates/reservation/update.html
+++ b/src/main/resources/templates/reservation/update.html
@@ -47,6 +47,6 @@
         </table>
         <input
                 onclick="return confirm('¿Seguro que desea realizar la reserva y los datos son correctos?')"
-                type="submit" value="Reservar" class="btn btn-success"/>
+                type="submit" value="Reservar" class="btn btn-warning"/>
     </form>
 </main>
