--- a/src/main/resources/templates/areaPeriod/add.html
+++ b/src/main/resources/templates/areaPeriod/add.html
@@ -10,20 +10,40 @@
                 <th><label for="scheduleStart">Fecha de inicio</label></th>
                 <td><input type="date" id="scheduleStart" th:field="*{scheduleStart}"></td>
             </tr>
+            <tr th:each="err : ${#fields.errors('scheduleStart')}">
+                <td colspan="2">
+                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                </td>
+            </tr>
             <tr>
                 <th><label for="scheduleEnd">Fecha de fin</label></th>
                 <td><input type="date" id="scheduleEnd" th:field="*{scheduleEnd}"></td>
+            </tr>
+            <tr th:each="err : ${#fields.errors('scheduleEnd')}">
+                <td colspan="2">
+                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                </td>
             </tr>
             <tr>
                 <th><label for="periodStart">Hora de inicio</label></th>
                 <td><input type="time" id="periodStart" th:field="*{periodStart}"></td>
             </tr>
+            <tr th:each="err : ${#fields.errors('periodStart')}">
+                <td colspan="2">
+                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                </td>
+            </tr>
             <tr>
                 <th><label for="periodEnd">Hora de fin</label></th>
                 <td><input type="time" id="periodEnd" th:field="*{periodEnd}"></td>
             </tr>
+            <tr th:each="err : ${#fields.errors('periodEnd')}">
+                <td colspan="2">
+                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                </td>
+            </tr>
         </table>
         <input type="submit" onclick="return confirm('¿Seguro que desea añadir el horario y los datos son correctos?')"
-               value="Añadir horario" class="btn btn-success" />Añadir horario</td>
+               value="Añadir horario" class="btn btn-success"/>Añadir horario</td>
     </form>
 </main>
