--- a/src/main/resources/templates/controlStaff/add.html
+++ b/src/main/resources/templates/controlStaff/add.html
@@ -10,21 +10,41 @@
                 <th><label for="identification">Identificación</label></th>
                 <td><input type="text" id="identification" th:field="*{identification}"></td>
             </tr>
+            <tr th:each="err : ${#fields.errors('identification')}">
+                <td colspan="2">
+                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                </td>
+            </tr>
             <tr>
                 <th><label for="name">Nombre</label></th>
                 <td><input type="text" id="name" th:field="*{name}"></td>
+            </tr>
+            <tr th:each="err : ${#fields.errors('name')}">
+                <td colspan="2">
+                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                </td>
             </tr>
             <tr>
                 <th><label for="mail">Correo Electrónico</label></th>
                 <td><input type="text" id="mail" th:field="*{mail}"></td>
             </tr>
+            <tr th:each="err : ${#fields.errors('mail')}">
+                <td colspan="2">
+                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                </td>
+            </tr>
             <tr>
                 <th><label for="password">Contraseña</label></th>
                 <td><input type="text" id="password" th:field="*{password}"></td>
             </tr>
+            <tr th:each="err : ${#fields.errors('password')}">
+                <td colspan="2">
+                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                </td>
+            </tr>
         </table>
         <input onclick="return confirm('¿Seguro que quiere darle de alta y los datos son correctos?')"
-                type="submit" value="Dar de alta" class="btn btn-success"
+               type="submit" value="Dar de alta" class="btn btn-success"
         /></td>
     </form>
 </main>
