--- a/src/main/resources/templates/municipalManager/update.html
+++ b/src/main/resources/templates/municipalManager/update.html
@@ -10,27 +10,57 @@
                 <th><label for="identification">Identificación</label></th>
                 <td><input type="text" id="identification" th:field="*{identification}"></td>
             </tr>
+            <tr th:each="err : ${#fields.errors('identification')}">
+                <td colspan="2">
+                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                </td>
+            </tr>
             <tr>
                 <th><label for="name">Nombre</label></th>
                 <td><input type="text" id="name" th:field="*{name}"></td>
+            </tr>
+            <tr th:each="err : ${#fields.errors('name')}">
+                <td colspan="2">
+                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                </td>
             </tr>
             <tr>
                 <th><label for="mail">Correo Electrónico</label></th>
                 <td><input type="text" id="mail" th:field="*{mail}"></td>
             </tr>
+            <tr th:each="err : ${#fields.errors('mail')}">
+                <td colspan="2">
+                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                </td>
+            </tr>
             <tr>
                 <th><label for="password">Contraseña</label></th>
                 <td><input type="text" id="password" th:field="*{password}"></td>
+            </tr>
+            <tr th:each="err : ${#fields.errors('password')}">
+                <td colspan="2">
+                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                </td>
             </tr>
             <tr>
                 <th><label for="municipality">Municipio</label></th>
                 <td><input type="number" id="municipality" th:field="*{municipality}"></td>
             </tr>
+            <tr th:each="err : ${#fields.errors('municipality')}">
+                <td colspan="2">
+                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                </td>
+            </tr>
             <tr>
                 <th><label for="phone">Teléfono</label></th>
                 <td><input type="text" id="phone" th:field="*{phone}"></td>
             </tr>
+            <tr th:each="err : ${#fields.errors('phone')}">
+                <td colspan="2">
+                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                </td>
+            </tr>
         </table>
-        <input type="submit" value="Actualizar gestor/a municipal" class="btn btn-warning" /></td>
+        <input type="submit" value="Actualizar gestor/a municipal" class="btn btn-warning"/></td>
     </form>
 </main>
