--- a/src/main/resources/templates/municipality/add.html
+++ b/src/main/resources/templates/municipality/add.html
@@ -10,8 +10,15 @@
                 <th><label for="name">Nombre</label></th>
                 <td><input type="text" id="name" th:field="*{name}"></td>
             </tr>
+            <tr th:each="err : ${#fields.errors('name')}">
+                <td colspan="2">
+                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                </td>
+            </tr>
         </table>
         <input type="submit" value="Añadir municipio"
-               class="btn btn-success" onclick="return confirm('¿Seguro que desea dar de alta el municipio y los datos son correctos?')"/>Dar de alta un municipio</td>
+               class="btn btn-success"
+               onclick="return confirm('¿Seguro que desea dar de alta el municipio y los datos son correctos?')"/>Dar de
+        alta un municipio</td>
     </form>
 </main>
